@@ -1024,6 +1024,8 @@ class Patch:
                 if 'cmd_files' in data["plugins"] and 'syntax_read_file' in data["plugins"]["cmd_files"]:
                     syntax = '"read_file": read data from file, if multiple files then pass list of files, params: "filename"'
                     data["plugins"]["cmd_files"]["syntax_read_file"] = syntax
+                if 'log.events' not in data:
+                    data["log.events"] = True
 
         # update file
         migrated = False
