@@ -4,6 +4,7 @@
 
 - A new option has been added to the `Web Search` plugin: `web_index_query`, which allows for indexing a web and external content in a temporary index (in memory) and quickly querying its content. Works similar to `query_file` command.
 - The `read_file` command has been expanded to handle multiple files at once.
+- Added `Log and debug events` option to Developer settings.
 
 # 2.1.8 (2024-03-03)
 
